Fixed a lot of offences

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,6 +61,9 @@ Style/ConditionalAssignment:
 Style/Documentation:
   Enabled: false
 
+Style/FormatStringToken:
+  Enabled: false
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
