--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,9 @@ Layout/EmptyLinesAroundArguments:
 Layout/EndAlignment:
   EnforcedStyleAlignWith: variable
 
+Layout/LineLength:
+  Max: 160
+
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 
@@ -58,9 +61,6 @@ Metrics/ClassLength:
 
 # Metrics/CyclomaticComplexity:
 #   Max: 10
-
-Metrics/LineLength:
-  Max: 160
 
 Metrics/MethodLength:
   Max: 50
