--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,5 +1,6 @@
 before_script:
   - RAILS_ENV=test bundle exec rake db:schema:load
+rvm: true
 script:
   - bundle exec rspec
   - bundle exec rake best_practice_project:run
