--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,6 +1,13 @@
 before_script:
   - RAILS_ENV=test bundle exec rake db:schema:load
 rvm: true
+environment:
+  REDIS_URL: redis://redis:6379/0
+services:
+  redis:
+    image: redis:5.0.7
+    expose:
+      - 6379
 script:
   - bundle exec rspec
   - bundle exec rake best_practice_project:run
