--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -8,6 +8,8 @@ services:
     image: redis:5.0.7
     expose:
       - 6379
+before_script:
+  - cd spec/dummy && bundle exec rails db:create db:schema:load
 script:
   - bundle exec rspec
   - bundle exec rake best_practice_project:run
