--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -9,7 +9,7 @@ services:
     expose:
       - 6379
 before_script:
-  - bundle exec rails db:create db:schema:load
+  - cd spec/dummy && bundle exec rake db:create db:schema:load
 script:
   - bundle exec rspec
   - bundle exec rake best_practice_project:run
