--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -10,7 +10,7 @@ services:
       - 6379
 before_script:
   - bundle exec rails db:test:reset
-  - ruby -e "File.unlink('db/peak_flow_utils.sqlite3') if File.exists?('db/peak_flow_utils.sqlite3')"
+  - ruby -e "File.unlink('spec/dummy/db/peak_flow_utils.sqlite3') if File.exists?('spec/dummy/db/peak_flow_utils.sqlite3')"
 script:
   - bundle exec rspec
   - bundle exec rake best_practice_project:run
