--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -6,12 +6,14 @@ builds:
   build_1:
     environment:
       RUBY_VERSION: 2.7.4
+    name: Ruby 2.7.4
     script:
       - bundle exec rspec
       - bundle exec rake best_practice_project:run
   build_2:
     environment:
       RUBY_VERSION: 3.0.3
+    name: Ruby 2.7.4
     script:
       - bundle exec rspec
       - bundle exec rake best_practice_project:run
