--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,20 +1,35 @@
 before_script:
   - ruby -e "File.unlink('spec/dummy/db/peak_flow_utils.sqlite3') if File.exists?('spec/dummy/db/peak_flow_utils.sqlite3')"
+  - bundle exec appraisal bundle
 rvm: true
 builds:
   build_1:
     environment:
-      RUBY_VERSION: 2.7.4
-    name: Ruby 2.7.4
+      RUBY_VERSION: 2.7.5
+    name: Ruby 2.7.5, Rails 6
     script:
-      - bundle exec rspec
-      - bundle exec rake best_practice_project:run
+      - bundle exec appraisal "rails 6" rspec
   build_2:
     environment:
       RUBY_VERSION: 3.0.3
-    name: Ruby 3.0.3
+    name: Ruby 3.0.3, Rails 6
     script:
-      - bundle exec rspec
+      - bundle exec appraisal "rails 6" rspec
+  build_3:
+    environment:
+      RUBY_VERSION: 2.7.5
+    name: Ruby 2.7.5, Rails 7
+    script:
+      - bundle exec appraisal "rails 7" rspec
+  build_4:
+    environment:
+      RUBY_VERSION: 3.0.3
+    name: Ruby 3.0.3, Rails 7
+    script:
+      - bundle exec appraisal "rails 7" rspec
+  build_5:
+    name: Linters
+    script:
       - bundle exec rake best_practice_project:run
 environment:
   REDIS_URL: redis://redis:6379/0
