--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
   schedule:
     interval: monthly
     time: "11:00"
-    timezone: Europe/Copenhagen
+    timezone: Europe/Berlin
   open-pull-requests-limit: 99
   ignore:
   - dependency-name: activerecord
