Upgraded Ruby versions

--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -5,29 +5,41 @@ rvm: true
 builds:
   build_1:
     environment:
-      RUBY_VERSION: 2.7.5
-    name: Ruby 2.7.5, Rails 6
+      RUBY_VERSION: 3.2.9
+    name: Ruby 3.2.9, Rails 6
     script:
       - bundle exec appraisal "rails 6" rspec
   build_2:
     environment:
-      RUBY_VERSION: 3.0.3
-    name: Ruby 3.0.3, Rails 6
+      RUBY_VERSION: 3.3.10
+    name: Ruby 3.3.10, Rails 6
     script:
       - bundle exec appraisal "rails 6" rspec
   build_3:
     environment:
-      RUBY_VERSION: 2.7.5
-    name: Ruby 2.7.5, Rails 7
+      RUBY_VERSION: 3.4.8
+    name: Ruby 3.4.8, Rails 6
     script:
-      - bundle exec appraisal "rails 7" rspec
+      - bundle exec appraisal "rails 6" rspec
   build_4:
     environment:
-      RUBY_VERSION: 3.0.3
-    name: Ruby 3.0.3, Rails 7
+      RUBY_VERSION: 3.2.9
+    name: Ruby 3.2.9, Rails 7
     script:
       - bundle exec appraisal "rails 7" rspec
   build_5:
+    environment:
+      RUBY_VERSION: 3.0.3
+    name: Ruby 3.3.10, Rails 7
+    script:
+      - bundle exec appraisal "rails 7" rspec
+  build_6:
+    environment:
+      RUBY_VERSION: 3.4.8
+    name: Ruby 3.4.8, Rails 7
+    script:
+      - bundle exec appraisal "rails 7" rspec
+  build_7:
     name: Linters
     script:
       - bundle exec rake best_practice_project:run
