--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -11,6 +11,7 @@ builds:
           RUBY_VERSION: 3.2.9
         name: Ruby 3.2.9, Rails 6
         script:
+          - bundle
           - bundle exec appraisal "rails 6" bundle
           - bundle exec appraisal "rails 6" rspec
       build_2:
@@ -18,6 +19,7 @@ builds:
           RUBY_VERSION: 3.3.10
         name: Ruby 3.3.10, Rails 6
         script:
+          - bundle
           - bundle exec appraisal "rails 6" bundle
           - bundle exec appraisal "rails 6" rspec
       build_3:
@@ -25,6 +27,7 @@ builds:
           RUBY_VERSION: 3.4.8
         name: Ruby 3.4.8, Rails 6
         script:
+          - bundle
           - bundle exec appraisal "rails 6" bundle
           - bundle exec appraisal "rails 6" rspec
       build_4:
@@ -32,6 +35,7 @@ builds:
           RUBY_VERSION: 3.2.9
         name: Ruby 3.2.9, Rails 7
         script:
+          - bundle
           - bundle exec appraisal "rails 7" bundle
           - bundle exec appraisal "rails 7" rspec
       build_5:
@@ -39,6 +43,7 @@ builds:
           RUBY_VERSION: 3.0.3
         name: Ruby 3.3.10, Rails 7
         script:
+          - bundle
           - bundle exec appraisal "rails 7" bundle
           - bundle exec appraisal "rails 7" rspec
       build_6:
@@ -46,6 +51,7 @@ builds:
           RUBY_VERSION: 3.4.8
         name: Ruby 3.4.8, Rails 7
         script:
+          - bundle
           - bundle exec appraisal "rails 7" bundle
           - bundle exec appraisal "rails 7" rspec
       build_7:
